changed conditional rendering of modal to visibility rendering; update and fix bugs on modal button functionalities; code cleaning

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -10,6 +10,9 @@
     justify-content: center;
     color: var(--gray-font-color);
 }
+.hidden {
+    display: none;
+}
 
 .modal-container {
     background-color: #fff;
